kubernetes/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: hello-world-app
  labels:
    app: hello-world-app
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 3000
  selector:
    app: hello-world-app
